fix(swagger): broken docs definitions
